# micro-cursor

./: .env.example  .gitignore  ENV_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_ci_checks.sh
.github/workflows/: ci.yml
micro_cursor/: __init__.py  __main__.py  agent.py  cli.py  llm.py  tool_schema.py  tools.py  workspace.py
tests/: conftest.py  test_agent.py  test_agent_demo.py  test_agent_safety.py  test_llm.py  test_llm_integration.py  test_llm_new_interface.py  test_llm_tool_calling.py  test_smoke.py  test_tool_schema.py  test_tools.py  test_tools_safety.py
work/: .agent_log.txt  calc.py  test_calc.py
